Updated Build.yml to find recipes correctly

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -12,7 +12,7 @@ modules:
       - jq
       - yq
       - tree
-      - envsubst
+      - gettext
       # Monitoring tools
       - htop
       - iotop
