--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     # Build daily at 6 AM UTC to pick up base image updates
     - cron: '0 6 * * *'
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, first-boot ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
