--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,16 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build BlueLab Image
-        uses: blue-build/github-action@v1.6
+        uses: blue-build/github-action@v1.8
         with:
-          recipe: recipe.yml
+          recipe: recipes/recipe.yml
           cosign_private_key: ${{ secrets.SIGNING_SECRET }}
           registry_token: ${{ secrets.GITHUB_TOKEN }}
           pr_event_number: ${{ github.event.number }}
           maximize_build_space: true
+          use_cache: true
+          registry: ghcr.io
+          registry_namespace: ${{ github.repository_owner }}
 
       - name: Generate ISO
         uses: jasonn3/build-container-installer@v1.2.2
@@ -61,15 +64,15 @@ jobs:
           arch: x86_64
           image_name: BlueLab
           image_repo: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          image_tag: latest
+          image_tag: ${{ github.ref_name }}
           variant: 'Silverblue'
           version: '41'
-          iso_name: bluelab.iso
+          iso_name: bluelab-${{ github.run_number }}.iso
 
       - name: Upload ISO
         uses: actions/upload-artifact@v4
         with:
-          name: bluelab.iso
+          name: bluelab-${{ github.run_number }}.iso
           path: ${{ steps.build.outputs.iso_path }}
           retention-days: 7
 
