--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: junglejm/bluelab
 
 jobs:
   build:
@@ -55,7 +55,7 @@ jobs:
           maximize_build_space: true
           use_cache: true
           registry: ghcr.io
-          registry_namespace: ${{ github.repository_owner }}
+          registry_namespace: junglejm
 
       - name: Generate ISO
         uses: jasonn3/build-container-installer@v1.2.2
