--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,10 +64,11 @@ jobs:
           arch: x86_64
           image_name: bluelab
           image_repo: ghcr.io/junglejm
-          image_tag: ${{ github.ref_name }}
+          image_tag: ${{ steps.meta.outputs.version }}
           variant: 'Silverblue'
           version: '41'
-          iso_name: bluelab-${{ github.run_number }}.iso
+          iso_name: bluelab-${{ github.ref_name }}-${{ github.run_number }}.iso
+          squashfs_only: 'true'
 
       - name: Upload ISO
         uses: actions/upload-artifact@v4
