Fix ISO generation: use correct BlueBuild tag pattern
- Use br-{branch}-41 tag pattern that matches BlueBuild's actual output
- Previous attempt used steps.meta.outputs.version which was 'first-boot'
- But BlueBuild actually publishes as 'br-first-boot-41' format
- This should resolve the manifest unknown error in ISO generation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
           arch: x86_64
           image_name: bluelab
           image_repo: ghcr.io/junglejm
-          image_tag: ${{ steps.meta.outputs.version }}
+          image_tag: br-${{ github.ref_name }}-41
           variant: 'Silverblue'
           version: '41'
           iso_name: bluelab-${{ github.ref_name }}-${{ github.run_number }}.iso
