Add files module to recipe: first incremental addition
- Enable files module to copy all scripts and templates to ISO
- This includes first-boot script, systemd services, and stack templates
- Next step will be enabling systemd services after confirming files copy correctly

This represents the first incremental addition after achieving baseline ISO generation.

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -3,6 +3,8 @@ description: BlueLab - Automated homelab system based on Bluefin-DX
 base-image: ghcr.io/ublue-os/bluefin-dx
 image-version: 41
 
-modules: []
-  # All modules temporarily disabled to test basic ISO generation first
-  # Will re-enable with containerfile workaround once ISO build succeeds
+modules:
+  - type: files
+    files:
+      - source: files/
+        destination: /
