--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,5 +6,9 @@ image-version: 41
 modules:
   - type: files
     files:
-      - source: .
-        destination: /
+      - source: bin
+        destination: /usr/bin
+      - source: lib
+        destination: /usr/lib  
+      - source: share
+        destination: /usr/share
