Add systemd module: enable first-boot automation services
- Enable bluelab-first-boot.service for first-boot automation
- Enable bluelab-updater.timer for scheduled updates
- Timer automatically manages bluelab-updater.service

This completes the second incremental addition after files module.
Next step will be adding package dependencies.

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -12,3 +12,9 @@ modules:
         destination: /usr/lib  
       - source: share
         destination: /usr/share
+        
+  - type: systemd
+    system:
+      enabled:
+        - bluelab-first-boot.service
+        - bluelab-updater.timer
