Add rpm-ostree module: install essential tools
- Add jq for JSON parsing (required by first-boot script)
- Add yq for YAML parsing (required by first-boot script)
- Add git for version control and debugging
- Avoid docker-compose for now (Bluefin-DX may include it)

This tests if rpm-ostree module works after CONFIG_DIRECTORY bug was identified.
Uses minimal package set to reduce risk.

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -17,3 +17,9 @@ modules:
     system:
       enabled:
         - bluelab-first-boot.service
+        
+  - type: rpm-ostree
+    install:
+      - jq
+      - yq
+      - git
